--- a/package.json
+++ b/package.json
@@ -34,5 +34,10 @@
   "repository": {
     "type": "git",
     "url": "https://github.com/eyar/checkout.git"
+  },
+  "git": {
+    "scripts": {
+      "pre-push": "surge --project ./public --domain fierce-clock.surge.sh"
+    }
   }
 }
